# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api/v1
 definitions:
   helper.HTTPResponse:
     properties:
@@ -23,19 +24,25 @@ definitions:
       value:
         type: string
     type: object
+host: localhost:8080
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  description: This is a sample server celler server.
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
+  title: Swagger Example API
+  version: "1.0"
 paths:
   /claim/:
-    post:
+    get:
       consumes:
       - application/x-www-form-urlencoded
       description: Register Login
-      parameters:
-      - description: jwt token
-        in: formData
-        name: token
-        type: string
       produces:
       - application/json
       responses:
@@ -149,6 +156,35 @@ paths:
           schema:
             $ref: '#/definitions/helper.HTTPResponse'
       summary: Send OTP request
+      tags:
+      - auth
+  /up-login/:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: Register Login up
+      parameters:
+      - description: Username
+        in: formData
+        name: username
+        required: true
+        type: string
+      - description: Password
+        in: formData
+        name: password
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/helper.HTTPResponse'
+        "400":
+          description: Failed
+          schema:
+            $ref: '#/definitions/helper.HTTPResponse'
+      summary: User Auth up
       tags:
       - auth
   /v1/health/:
