# src/api/handlers/auth.go
@@ -4,7 +4,9 @@ import (
 	"chat/config"
 	"chat/dto"
 	"chat/services"
+	"fmt"
 	"net/http"
+	"strings"
 
 	"github.com/gin-gonic/gin"
 )
@@ -18,12 +20,16 @@ type AuthMobile struct {
 	Mobile string `form:"mobile" binding:"mobile,min=11,max=11,required"`
 	Otp    string `form:"otp"`
 }
+type AuthUp struct {
+	Username string `form:"username" binding:"required"`
+	Password string `form:"password"`
+}
 type AuthRegister struct {
-	FirstName string `form:"firstName" binding:"required, min=3"`
-	LastName  string `form:"lastName" binding:"required, min=3"`
-	Username  string `form:"username" binding:"required, min=3"`
-	Email     string `form:"email" binding:"required, email"`
-	Password  string `form:"password" binding:"required, password"`
+	FirstName string `form:"firstName" binding:"required,min=3"`
+	LastName  string `form:"lastName" binding:"required,min=3"`
+	Username  string `form:"username" binding:"required,min=3"`
+	Email     string `form:"email" binding:"required,email"`
+	Password  string `form:"password" binding:"required"`
 }
 
 // User_Auth godoc
@@ -43,6 +49,7 @@ type AuthRegister struct {
 func (re AuthRegister) Register(c *gin.Context) {
 
 	err := c.ShouldBind(&re)
+	fmt.Println(re)
 	if err != nil {
 		c.AbortWithStatusJSON(400, gin.H{
 			"error": err.Error(),
@@ -113,29 +120,68 @@ func (auth AuthMobile) RLMobile(c *gin.Context) {
 }
 
 // User_Auth godoc
-// @Summary Get Claims
-// @Description Register Login
+// @Summary User Auth up
+// @Description Register Login up
 // @Tags auth
-// @Security AuthBearer
 // @Accept  x-www-form-urlencoded
 // @Produce  json
-// @Param token formData string false "jwt token"
+// @Param username formData string true "Username"
+// @Param password formData string false "Password"
 // @Success 200 {object} helper.HTTPResponse "Success"
 // @Failure 400 {object} helper.HTTPResponse "Failed"
-// @Router /claim/ [post]
-func (t TokenHandler) GetClaims(c *gin.Context) {
-	err := c.ShouldBind(&t)
+// @Router /up-login/ [post]
+func (auth AuthUp) UserPassLogin(c *gin.Context) {
 
+	username := c.DefaultPostForm("username", "")
+	password := c.DefaultPostForm("password", "")
+	am := AuthUp{
+		Username: username,
+		Password: password,
+	}
+
+	dto := dto.LoginByUsernameDto{
+		Username: am.Username,
+		Password: am.Password,
+	}
+
+	userService := services.NewUserService(cfg)
+	tokenDetail, err := userService.UserPassLogin(dto)
 	if err != nil {
 		c.AbortWithStatusJSON(400, gin.H{
 			"error": err.Error(),
 		})
 		return
 	}
+	c.JSON(http.StatusOK, gin.H{
+		"status": true,
+		"token":  tokenDetail,
+	})
+}
+
+// User_Auth godoc
+// @Summary Get Claims
+// @Description Register Login
+// @Tags auth
+// @Security AuthBearer
+// @Accept  x-www-form-urlencoded
+// @Produce  json
+// @Success 200 {object} helper.HTTPResponse "Success"
+// @Failure 400 {object} helper.HTTPResponse "Failed"
+// @Router /claim/ [get]
+func (t TokenHandler) GetClaims(c *gin.Context) {
+	auth := c.GetHeader("Authorization")
+
+	// if err != nil {
+	// 	c.AbortWithStatusJSON(400, gin.H{
+	// 		"error": err.Error(),
+	// 	})
+	// 	return
+	// }
 
 	tokenService := services.NewTokenService(cfg)
-	// fmt.Println(t.Token)
-	mpClaims, _ := tokenService.GetClaims(t.Token)
+	token := strings.Split(auth, " ")
+	accessToken := token[1]
+	mpClaims, _ := tokenService.GetClaims(accessToken)
 
 	c.JSON(http.StatusOK, gin.H{
 		"status": true,
